# ai-commit

./: README.md  README_CN.md  pyproject.toml  requirements.txt
ai_commit/: __init__.py  cli.py  core.py
