[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit"
version = "1.0.0"
description = "Automatically generate Git commit messages using AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alex-2Code", email = "alex@example.com"}
]
keywords = ["git", "commit", "ai", "openai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
ai-commit = "ai_commit.cli:main"

[project.urls]
Homepage = "https://github.com/Alex-2Code/ai-commit"
Repository = "https://github.com/Alex-2Code/ai-commit"
Issues = "https://github.com/Alex-2Code/ai-commit/issues"
